# collvoid

collvoid_amcl/cfg/: AMCL.cfg
collvoid_amcl/src/: amcl_node.cpp
collvoid_controller/src/collvoid_controller/: detect_obstacles.py  position_share_controller.py
collvoid_dwa_local_planner/: CMakeLists.txt
collvoid_local_planner/: CMakeLists.txt
collvoid_local_planner/include/collvoid_local_planner/: ROSAgent.h
collvoid_local_planner/src/: ROSAgent.cpp  collvoid_local_planner.cpp  me_publisher.cpp
collvoid_stage/params/: move_base_params_turtle.yaml
collvoid_turtlebot/params/: move_base_params_turtle.yaml
collvoid_wiggle_recovery/: CMakeLists.txt
experimental/pacman_controller/params/: params_turtle.yaml
